--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -1,62 +1,106 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-* {
+:root {
+  --mainColor: #358573;
+  --hoverColor: #52e2db;
+  --backgroundColor: #dff5f5;
+  --darkOne: #2f3a38;
+  --darkTwo: #424b49;
+  --lightOne:#919191;
+  --lightTwo: #aaa;
+}
+
+*, *::before, *::after {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-/*===== ROOT ======*/
-:root {
-  --primary-color: #1B2338;
-  --secondary-color:#B0253C;
-  --color-text: #fff;
-  --header-height: 3rem;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-/*===== RESET HTML =====*/
-html, body {
+img {
   width: 100%;
-  height: 100vh;
-  font-family: 'Poppins',sans-serif;
-  font-size: 14px;
-  color: #fff;
-  overflow: hidden !important;
-}
-
-ul li {
-  list-style-type: none;
 }
 
 a {
   text-decoration: none;
 }
 
-button {
+.logo {
+  padding: 20px;
+  max-width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   cursor: pointer;
-  border: none;
-  outline: none;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 100%;
-  z-index: 100;
+.main-wrapper {
+  padding: 1.7rem 0 2rem;
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--backgroundColor);
+  overflow: hidden;
 }
 
-.first {
-  background-color: var(--primary-color);
+.container {
+  background-color: #ffff;
+  max-width: 90rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 3rem;
+  z-index: 10;
+  position: relative;
 }
 
-.second {
-  background-color: white;
-  left: 33.3%;
+header .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.third {
-  background-color: var(--secondary-color);
-  left: 66.6%;
+.links ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.links a {
+  color: var(--darkOne);
+  margin-left: 4.5rem;
+  display: inline-block;
+  font-size: 1.3rem;
+}
+
+.button {
+  display: inline-block;
+  padding: 1.1rem 1.9rem;
+  color: #ffff !important;
+  background-color: var(--mainColor);
+  border-radius: 14px;
+  text-transform: capitalize;
+  min-height: 45px;
+  min-width: 65px;
+}
+
+.showcase {
+  background-color: violet;
+  width: 100%;
+  min-height: 300px;
 }
 /*# sourceMappingURL=style.css.map */
